tests/content-scanning/forbid-subsections/snapshot.txt
*-----------------------------------------------*
|    WARNING: THIS IS A DEBUG BUILD OF ZINE     |
|-----------------------------------------------|
| Debug builds enable expensive sanity checks   |
| that reduce performance.                      |
|                                               |
| To create a release build, run:               |
|                                               |
|       zig build -Doptimize=ReleaseFast        |
|                                               |
| If you're investigating a bug in Zine, then a |
| debug build might turn confusing behavior     |
| into a crash.                                 |
|                                               |
| To disable all forms of concurrency, you can  |
| add the following flag to your build command: |
|                                               |
|              -Dsingle-threaded                |
|                                               |
*-----------------------------------------------*

content/archive/2024/index.smd: error: the parent section forbids subsections
| -- note: you can preserve the same URL by moving this page to:
|          'content/archive/2024.smd'
| -- note: the parent section is:
|          'content/archive/index.smd'
| -- note: this is usually done to guarantee that `$page.leaves()`
|          correctly returns all pages in the parent section

content/archive/2025/index.smd: error: the parent section forbids subsections
| -- note: you can preserve the same URL by moving this page to:
|          'content/archive/2025.smd'
| -- note: the parent section is:
|          'content/archive/index.smd'
| -- note: this is usually done to guarantee that `$page.leaves()`
|          correctly returns all pages in the parent section

content/archive/2024/first.smd:6:23: error: forbid_subsections can only be true in 'index.smd' pages
|   .forbid_subsections = true, // should not be set on a non-index page
|                         ^^^^

----------------------------
       -- VARIANT --
----------------------------
.id = 0,
.content_dir_path = content

  ------- SECTION -------
.index = 1,
.section_path = content/,
.active = true,
.forbid_subsections false,
.pages = [
    content/sections.smd
    content/archive/index.smd
],


  ------- SECTION -------
.index = 2,
.section_path = content/archive/,
.active = true,
.forbid_subsections true,
.pages = [
    content/archive/2025/index.smd
    content/archive/2024/index.smd
],


  ------- SECTION -------
.index = 3,
.section_path = content/archive/2024/,
.active = true,
.forbid_subsections false,
.pages = [
    content/archive/2024/second/index.smd
    content/archive/2024/first.smd
],


  ------- SECTION -------
.index = 4,
.section_path = content/archive/2024/second/,
.active = true,
.forbid_subsections false,
.pages = [
],


  ------- SECTION -------
.index = 5,
.section_path = content/archive/2025/,
.active = true,
.forbid_subsections false,
.pages = [
    content/archive/2025/second.smd
],



 ----- EXIT CODE: 1 -----
